--- a/Pj_BIFF/index.html
+++ b/Pj_BIFF/index.html
@@ -129,7 +129,7 @@
         " data-swiper-parallax="-23%"></div>
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
-                            <div class="title" data-swiper-parallax="-300">&lt;초록밤&gt;아트하우스상</div>
+                            <div class="title" data-swiper-parallax="-300">&lt;초록밤&gt;</div>
                             <div class="subtitle" data-swiper-parallax="-200">윤서진 | 대한민국</div>
                             <div class="text" data-swiper-parallax="-100">
                                 <p>
@@ -154,6 +154,36 @@
                         </div>
                         <div class="swiper-slide">
                             <div class="title" data-swiper-parallax="-300">Slide 3</div>
+                            <div class="subtitle" data-swiper-parallax="-200">Subtitle</div>
+                            <div class="text" data-swiper-parallax="-100">
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
+                                    dictum mattis velit, sit amet faucibus felis iaculis nec. Nulla
+                                    laoreet justo vitae porttitor porttitor. Suspendisse in sem justo.
+                                    Integer laoreet magna nec elit suscipit, ac laoreet nibh euismod.
+                                    Aliquam hendrerit lorem at elit facilisis rutrum. Ut at
+                                    ullamcorper velit. Nulla ligula nisi, imperdiet ut lacinia nec,
+                                    tincidunt ut libero. Aenean feugiat non eros quis feugiat.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="title" data-swiper-parallax="-300">Slide 4</div>
+                            <div class="subtitle" data-swiper-parallax="-200">Subtitle</div>
+                            <div class="text" data-swiper-parallax="-100">
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
+                                    dictum mattis velit, sit amet faucibus felis iaculis nec. Nulla
+                                    laoreet justo vitae porttitor porttitor. Suspendisse in sem justo.
+                                    Integer laoreet magna nec elit suscipit, ac laoreet nibh euismod.
+                                    Aliquam hendrerit lorem at elit facilisis rutrum. Ut at
+                                    ullamcorper velit. Nulla ligula nisi, imperdiet ut lacinia nec,
+                                    tincidunt ut libero. Aenean feugiat non eros quis feugiat.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="title" data-swiper-parallax="-300">Slide 5</div>
                             <div class="subtitle" data-swiper-parallax="-200">Subtitle</div>
                             <div class="text" data-swiper-parallax="-100">
                                 <p>
