--- a/Pj_BIFF/index.html
+++ b/Pj_BIFF/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/swiper-bundle.min.css">
     <link rel="stylesheet" href="css/C3swiper-bundle.min.css">
     <link rel="stylesheet" href="css/gallery.css">
+    <link rel="stylesheet" href="css/C3gallery.css">
     <link rel="stylesheet" href="./css/media.css">
     
     <script src="./JS/main.js"></script>
@@ -226,7 +227,7 @@
                     <div class="swiper-pagination1"></div>
                   </div>
 
-                <!-- <h3 class="ad3">와이드 앵글</h3> -->
+                <h3 class="ad3">와이드 앵글</h3>
             </section>
             <!-- /******************************************* cont4 *******************************************/ -->
             <section id="pg4" class="cont4">
