--- a/Pj_BIFF/index.html
+++ b/Pj_BIFF/index.html
@@ -113,7 +113,7 @@
     <div id="cont">
 
         <section id="pg1" class="cont1">
-            <a href="./sub1.html">
+            <a href="./Swiper demo.html">
             <video class="Mvideo" src="./img/BIFF2021_1080.mp4" autoplay muted loop></video>
             <h1 id="gosub">
                 <img src="./img/logo.gif" alt="BIFF로고">
@@ -140,6 +140,7 @@
                             </div>
                         </div>
                        
+                        
                         <div class="swiper-slide">
                             <div class="title" data-swiper-parallax="-300">Slide 2</div>
                             <div class="subtitle" data-swiper-parallax="-200">Subtitle</div>
@@ -210,39 +211,6 @@
 
             <!-- /******************************************* cont3 *******************************************/ -->
             <section id="pg3" class="cont3">
-
-                <h2>ICE CREAM GALLERY</h2>
-                <div id="handle">
-                    <div id="move">
-                        <ul class="dselect">
-                            <li><img src="./biff/img/sddefault (1).jpg" alt="items"></li>
-                            <li><img src="./biff/img/sddefault (2).jpg" alt="items"></li>
-                            <li><img src="./biff/img/sddefault (3).jpg" alt="items"></li>
-                            <li><img src="./biff/img/sddefault (4).jpg" alt="items"></li>
-                            <li><img src="./biff/img/sddefault (5).jpg" alt="items"></li>
-                            <li><img src="./biff/img/sddefault (6).jpg" alt="items"></li>
-                            <li><img src="./biff/img/sddefault (7).jpg" alt="items"></li>
-                            <li><img src="./biff/img/sddefault (8).jpg" alt="items"></li>
-                            <li><img src="./biff/img/sddefault (9).jpg" alt="items"></li>
-                            <li><img src="./biff/img/sddefault (10).jpg" alt="items"></li>
-                            <li><img src="./biff/img/sddefault (11).jpg" alt="items"></li>
-                            <li><img src="./biff/img/sddefault (12).jpg" alt="items"></li>
-                            <li><img src="./biff/img/sddefault (13).jpg" alt="items"></li>
-                            <li><img src="./biff/img/sddefault (14).jpg" alt="items"></li>
-                            <li><img src="./biff/img/sddefault (15).jpg" alt="items"></li>
-                            <li><img src="./biff/img/sddefault (16).jpg" alt="items"></li>
-                            <li><img src="./biff/img/sddefault (17).jpg" alt="items"></li>
-                            <li><img src="./biff/img/sddefault (18).jpg" alt="items"></li>
-                            <li><img src="./biff/img/sddefault (3).jpg" alt="items"></li>
-                            <li><img src="./biff/img/sddefault (3).jpg" alt="items"></li>
-                            <li><img src="./biff/img/sddefault (3).jpg" alt="items"></li>
-                            <li><img src="./biff/img/sddefault (3).jpg" alt="items"></li>
-                            <li><img src="./biff/img/sddefault (3).jpg" alt="items"></li>
-                            <li><img src="./biff/img/sddefault (3).jpg" alt="items"></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="case">
                     <h2>ICE CREAM GALLERY</h2>
                     <div id="handle">
                         <div id="move">
@@ -274,7 +242,37 @@
                             </ul>
                         </div>
                     </div>
-                </div>
+                    <h2>ICE CREAM GALLERY</h2>
+                    <div id="handle">
+                        <div id="move">
+                            <ul class="dselect">
+                                <li><img src="./biff/img/sddefault (1).jpg" alt="items"></li>
+                                <li><img src="./biff/img/sddefault (2).jpg" alt="items"></li>
+                                <li><img src="./biff/img/sddefault (3).jpg" alt="items"></li>
+                                <li><img src="./biff/img/sddefault (4).jpg" alt="items"></li>
+                                <li><img src="./biff/img/sddefault (5).jpg" alt="items"></li>
+                                <li><img src="./biff/img/sddefault (6).jpg" alt="items"></li>
+                                <li><img src="./biff/img/sddefault (7).jpg" alt="items"></li>
+                                <li><img src="./biff/img/sddefault (8).jpg" alt="items"></li>
+                                <li><img src="./biff/img/sddefault (9).jpg" alt="items"></li>
+                                <li><img src="./biff/img/sddefault (10).jpg" alt="items"></li>
+                                <li><img src="./biff/img/sddefault (11).jpg" alt="items"></li>
+                                <li><img src="./biff/img/sddefault (12).jpg" alt="items"></li>
+                                <li><img src="./biff/img/sddefault (13).jpg" alt="items"></li>
+                                <li><img src="./biff/img/sddefault (14).jpg" alt="items"></li>
+                                <li><img src="./biff/img/sddefault (15).jpg" alt="items"></li>
+                                <li><img src="./biff/img/sddefault (16).jpg" alt="items"></li>
+                                <li><img src="./biff/img/sddefault (17).jpg" alt="items"></li>
+                                <li><img src="./biff/img/sddefault (18).jpg" alt="items"></li>
+                                <li><img src="./biff/img/sddefault (3).jpg" alt="items"></li>
+                                <li><img src="./biff/img/sddefault (3).jpg" alt="items"></li>
+                                <li><img src="./biff/img/sddefault (3).jpg" alt="items"></li>
+                                <li><img src="./biff/img/sddefault (3).jpg" alt="items"></li>
+                                <li><img src="./biff/img/sddefault (3).jpg" alt="items"></li>
+                                <li><img src="./biff/img/sddefault (3).jpg" alt="items"></li>
+                            </ul>
+                        </div>
+                    </div>
 
             </section>
             <!-- /******************************************* cont4 *******************************************/ -->
