--- a/Pj_BIFF/sub1.html
+++ b/Pj_BIFF/sub1.html
@@ -84,8 +84,8 @@
             <div class="gnb2">
                 <div>
                     <ul class="lb">
-                        <li class="on"><a href="#pg1">프로그램</a></li>
-                        <!-- <li><a href="#pg2">프로그램</a></li> -->
+                        <li class="on"><a href="#pg1"></a></li>
+                        <li><a href="#pg2">수상후보작</a></li>
                     </ul>
 
                 </div>
@@ -93,8 +93,8 @@
                     <ul class="rb">
                         <li></li>
                         <li></li>
-                        <!-- <li><a href="#pg3">시간표</a></li> -->
-                        <li><a href="#page4">상영시간표</a></li>
+                        <li><a href="#pg3">우수출품작</a></li>
+                        <li><a href="#pg4">상영시간표</a></li>
                     </ul>
                 </div>
             </div>
