--- a/Pj_BIFF/sub1.html
+++ b/Pj_BIFF/sub1.html
@@ -14,7 +14,7 @@
     <!-- 부드러운 스크롤 플러그인 : 제이쿼리아님! -->
     <script src="./JS/jquery-3.6.0.min.js"></script>
     <script src="./JS/jquery-ui.min.js"></script>
-    <script src="./JS/jquery-autoScroll-1.0.js"></script>
+    <script src="./JS/sub_jquery-autoScroll-1.0.js"></script>
 
 </head>
 
@@ -85,7 +85,7 @@
                 <div>
                     <ul class="lb">
                         <li class="on"><a href="#pg1"></a></li>
-                        <li><a href="#pg2">수상후보작</a></li>
+                        <li><a href="#pg1">수상후보작</a></li>
                     </ul>
 
                 </div>
@@ -288,16 +288,13 @@
         <nav class="indic">
             <ul>
                 <li class="on">
-                    <a href="#pg1"><span>아수라</span></a>
+                    <a href="#pg1"><span>1</span></a>
                 </li>
                 <li>
-                    <a href="#pg2"><span>고산자</span></a>
+                    <a href="#pg2"><span>2</span></a>
                 </li>
                 <li>
-                    <a href="#pg3"><span>인천상륙작전</span></a>
-                </li>
-                <li>
-                    <a href="#pg4"><span>봉이김선달</span></a>
+                    <a href="#pg3"><span>3</span></a>
                 </li>
 
             </ul>
