--- a/Pj_BIFF/index.html
+++ b/Pj_BIFF/index.html
@@ -416,16 +416,16 @@
         <nav class="indic">
             <ul>
                 <li class="on">
-                    <a href="#pg1"><span>아수라</span></a>
+                    <a href="#pg1"><span>1</span></a>
                 </li>
                 <li>
-                    <a href="#pg2"><span>고산자</span></a>
+                    <a href="#pg2"><span>2</span></a>
                 </li>
                 <li>
-                    <a href="#pg3"><span>인천상륙작전</span></a>
+                    <a href="#pg3"><span>3</span></a>
                 </li>
                 <li>
-                    <a href="#pg4"><span>봉이김선달</span></a>
+                    <a href="#pg4"><span>4</span></a>
                 </li>
 
             </ul>
