--- a/Pj_BIFF/sub1.html
+++ b/Pj_BIFF/sub1.html
@@ -93,8 +93,8 @@
                     <ul class="rb">
                         <li></li>
                         <li></li>
-                        <li><a href="#pg3">우수출품작</a></li>
-                        <li><a href="#pg4">상영시간표</a></li>
+                        <li><a href="#pg3">작품소개</a></li>
+                        <li><a href="#pg4">스케줄</a></li>
                     </ul>
                 </div>
             </div>
@@ -110,6 +110,13 @@
             <div class="play-backdrop"></div>
             <div class="backmain">
                 <a class="back" href="./index.html">뒤로가기</a>
+                <ul class="Mtxt">
+                    <li>지옥 Hellbound</li>
+                    <li>Director <br>
+                        YEON Sang-ho 연상호</li>
+                    <li>"몇 날 몇 시에 당신은 죽는다, 지옥에 간다" 그렇게 지옥으로부터의 고지를 받은 자는 어김 없이 예정된 시간에 지옥의 사자들에게 끌려간다. 그런 일이 서울 한복판에서 모두가 지켜보는 가운데 일어난다. </li>
+                    <li>*10/7(목) GV는 상영전 무대인사로 진행됩니다.</li>
+                </ul>
             </div>
             
             <div class="play-button">
