--- a/Pj_BIFF/index.html
+++ b/Pj_BIFF/index.html
@@ -139,17 +139,11 @@
                                 </div>
                         </div>
                         <div class="swiper-slide">
-                            <div class="title" data-swiper-parallax="-300">Slide 2</div>
-                            <div class="subtitle" data-swiper-parallax="-200">Subtitle</div>
+                            <div class="title" data-swiper-parallax="-300">&lt;지옥&gt;</div>
+                            <div class="subtitle" data-swiper-parallax="-200">윤서진 | 대한민국</div>
                             <div class="text" data-swiper-parallax="-100">
                                 <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-                                    dictum mattis velit, sit amet faucibus felis iaculis nec. Nulla
-                                    laoreet justo vitae porttitor porttitor. Suspendisse in sem justo.
-                                    Integer laoreet magna nec elit suscipit, ac laoreet nibh euismod.
-                                    Aliquam hendrerit lorem at elit facilisis rutrum. Ut at
-                                    ullamcorper velit. Nulla ligula nisi, imperdiet ut lacinia nec,
-                                    tincidunt ut libero. Aenean feugiat non eros quis feugiat.
+                                    "몇 날 몇 시에 당신은 죽는다, 지옥에 간다" 그렇게 지옥으로부터의 고지를 받은 자는 어김 없이 예정된 시간에 지옥의 사자들에게 끌려간다. 그런 일이 서울 한복판에서 모두가 지켜보는 가운데 일어난다. 신흥 종교 단체 새진리회의 의장 정진수(유아인)는 이것이 진정으로 현실 세계에서 일어나고 있는 신의 집행임을 사람들에게 설파한다. 한편 일부는 새진리회에 맞서 싸우며 사건의 실체를 밝히려 한다.
                                 </p>
                             </div>
                         </div>
