--- a/Pj_BIFF/sub1.html
+++ b/Pj_BIFF/sub1.html
@@ -85,7 +85,7 @@
                 <div>
                     <ul class="lb">
                         <li class="on"><a href="#pg1"></a></li>
-                        <li><a href="#pg2">수상후보작</a></li>
+                        <li><a href="#pg2">작품소개</a></li>
                     </ul>
 
                 </div>
@@ -93,8 +93,8 @@
                     <ul class="rb">
                         <li></li>
                         <li></li>
-                        <li><a href="#pg3">작품소개</a></li>
-                        <li><a href="#pg4">스케줄</a></li>
+                        <li><a href="#pg3">스케줄</a></li>
+                        <li><a href="#pg4"></a></li>
                     </ul>
                 </div>
             </div>
