--- a/Pj_BIFF/index.html
+++ b/Pj_BIFF/index.html
@@ -110,26 +110,26 @@
 
     <!-- /******************************************* cont1 *******************************************/ -->
     <div id="cont">
-
         <section id="pg1" class="cont1">
             <a href="./sub1.html">
-            <video class="Mvideo" src="./img/BIFF2021_1080.mp4" autoplay muted loop></video>
-            <h1 id="gosub">
-                <img src="./img/logo.gif" alt="BIFF로고">
-            </h1>
-        </a>
+                <video class="Mvideo" src="./img/BIFF2021_1080.mp4" autoplay muted loop></video>
+                <h1 id="gosub">
+                    <img src="./img/logo.gif" alt="BIFF로고">
+                </h1>
+            </a>
         </section>
+    </div>
         <!-- /******************************************* cont2 *******************************************/ -->
         <main class="cont ibx">
             <section id="pg2" class="cont2">
                 <!-- Swiper -->
-                
                 <div style="--swiper-navigation-color: #fff; --swiper-pagination-color: #fff" class="swiper mySwiper">
                         <div class="parallax-bg" style="
           background-image: url(./img/mi4.jpeg);
           " data-swiper-parallax="-23%"></div>
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
+                            <h2 data-swiper-parallax="-400">백금상수상</h2>
                                 <div class="title" data-swiper-parallax="-300">&lt;초록밤&gt;</div>
                                 <div class="subtitle" data-swiper-parallax="-200">윤서진 | 대한민국</div>
                                 <div class="text" data-swiper-parallax="-100">
@@ -139,6 +139,7 @@
                                 </div>
                         </div>
                         <div class="swiper-slide">
+                            <h2 data-swiper-parallax="-400">백금상수상</h2>
                             <div class="title" data-swiper-parallax="-300">&lt;지옥&gt;</div>
                             <div class="subtitle" data-swiper-parallax="-200">윤서진 | 대한민국</div>
                             <div class="text" data-swiper-parallax="-100">
@@ -148,6 +149,7 @@
                             </div>
                         </div>
                         <div class="swiper-slide">
+                            <h2 data-swiper-parallax="-400">백금상수상</h2>
                             <div class="title" data-swiper-parallax="-300">Slide 3</div>
                             <div class="subtitle" data-swiper-parallax="-200">Subtitle</div>
                             <div class="text" data-swiper-parallax="-100">
@@ -163,6 +165,7 @@
                             </div>
                         </div>
                         <div class="swiper-slide">
+                            <h2 data-swiper-parallax="-400">백금상수상</h2>
                             <div class="title" data-swiper-parallax="-300">Slide 4</div>
                             <div class="subtitle" data-swiper-parallax="-200">Subtitle</div>
                             <div class="text" data-swiper-parallax="-100">
@@ -178,6 +181,7 @@
                             </div>
                         </div>
                         <div class="swiper-slide">
+                            <h2 data-swiper-parallax="-400">백금상수상</h2>
                             <div class="title" data-swiper-parallax="-300">Slide 5</div>
                             <div class="subtitle" data-swiper-parallax="-200">Subtitle</div>
                             <div class="text" data-swiper-parallax="-100">
@@ -317,7 +321,7 @@
                                 <span class="code en">605관</span>
                                 <p class="time en">18:00</p>
                                 <div class="film_tit">
-                                    <div id="txt6">
+                                    <div id="txt6-1">
                                         <span class="film_tit_kor">행복의 나라로</span>
                                         <span class="film_tit_eng en">To the Land of Happiness</span>
                                     </div>
