--- a/Pj_BIFF/sub1.html
+++ b/Pj_BIFF/sub1.html
@@ -84,7 +84,7 @@
             <div class="gnb2">
                 <div>
                     <ul class="lb">
-                        <li><a href="#pg1">작품소개</a></li>
+                        <li class="on"><a href="#pg1">작품소개</a></li>
                     </ul>
 
                 </div>
