--- a/Pj_BIFF/sub1.html
+++ b/Pj_BIFF/sub1.html
@@ -91,6 +91,7 @@
                 <div>
                     <ul class="rb">
                         <li><a href="#pg2">스케줄</a></li>
+                        <li><a href="#pg2">스케줄</a></li>
                     </ul>
                 </div>
             </div>
