--- a/Pj_BIFF/sub1.html
+++ b/Pj_BIFF/sub1.html
@@ -8,7 +8,7 @@
     <title>부산국제영화제</title>
     <link rel="shortcut icon" href="./img/Biff_logo.jpg" type="image/x-icon">
     <link rel="stylesheet" href="./css/sub.css">
-    <link rel="stylesheet" href="./css/media.css">
+    <link rel="stylesheet" href="./css/submedia.css">
     
     <script src="./JS/main.js"></script>
     <!-- 부드러운 스크롤 플러그인 : 제이쿼리아님! -->
@@ -90,7 +90,7 @@
                 </div>
                 <div>
                     <ul class="rb">
-                        <li><a href="#pg2">스케줄</a></li>
+                        <li></li>
                         <li><a href="#pg2">스케줄</a></li>
                     </ul>
                 </div>
