--- a/Pj_BIFF/index.html
+++ b/Pj_BIFF/index.html
@@ -91,7 +91,7 @@
                 <div>
                     <ul class="lb">
                         <li class="on"><a href="#pg1">HOME</a></li>
-                        <li><a href="#pg2">수상후보작</a></li>
+                        <li><a href="#pg2">2021 수상작</a></li>
                     </ul>
 
                 </div>
@@ -99,7 +99,7 @@
                     <ul class="rb">
                         <li></li>
                         <li></li>
-                        <li><a href="#pg3">우수출품작</a></li>
+                        <li><a href="#pg3">현장 갤러리</a></li>
                         <li><a href="#pg4">상영시간표</a></li>
                     </ul>
                 </div>
