--- a/Pj_BIFF/index.html
+++ b/Pj_BIFF/index.html
@@ -129,17 +129,17 @@
           " data-swiper-parallax="-23%"></div>
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
-                            <h2 data-swiper-parallax="-400">백금상수상</h2>
+                            <h2 data-swiper-parallax="-400">CGK촬영상</h2>
                                 <div class="title" data-swiper-parallax="-300">&lt;초록밤&gt;</div>
                                 <div class="subtitle" data-swiper-parallax="-200">윤서진 | 대한민국</div>
                                 <div class="text" data-swiper-parallax="-100">
                                     <p>
-                                        흔히 생명력을 상징하는 초록의 이미지를 가족의 죽음으로 인한 어둡고 공허한 감정을 표현하는 장치로 활용하여 담담하면서도 독창적인 시선을 보여준 작품
+                                        이 영화는 절제된 대사와 서사의 공백을 감각적인 이미지와 사운드와 결합함으로써 죽음에 맞닥뜨린 가족을 드러냅니다. 또한 관념적인 주제를 다루지만, 시의성을 잃지 않는 균형을 보여주었기에 이 작품을 수상작으로 선택하였습니다.
                                     </p>
                                 </div>
                         </div>
                         <div class="swiper-slide">
-                            <h2 data-swiper-parallax="-400">백금상수상</h2>
+                            <h2 data-swiper-parallax="-400">시민평론가상</h2>
                             <div class="title" data-swiper-parallax="-300">&lt;지옥&gt;</div>
                             <div class="subtitle" data-swiper-parallax="-200">윤서진 | 대한민국</div>
                             <div class="text" data-swiper-parallax="-100">
@@ -149,50 +149,32 @@
                             </div>
                         </div>
                         <div class="swiper-slide">
-                            <h2 data-swiper-parallax="-400">백금상수상</h2>
-                            <div class="title" data-swiper-parallax="-300">Slide 3</div>
-                            <div class="subtitle" data-swiper-parallax="-200">Subtitle</div>
+                            <h2 data-swiper-parallax="-400">CGV아트하우스상</h2>
+                            <div class="title" data-swiper-parallax="-300">&lt;절해고도&gt;</div>
+                            <div class="subtitle" data-swiper-parallax="-200">김미영 | 대한민국</div>
                             <div class="text" data-swiper-parallax="-100">
                                 <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-                                    dictum mattis velit, sit amet faucibus felis iaculis nec. Nulla
-                                    laoreet justo vitae porttitor porttitor. Suspendisse in sem justo.
-                                    Integer laoreet magna nec elit suscipit, ac laoreet nibh euismod.
-                                    Aliquam hendrerit lorem at elit facilisis rutrum. Ut at
-                                    ullamcorper velit. Nulla ligula nisi, imperdiet ut lacinia nec,
-                                    tincidunt ut libero. Aenean feugiat non eros quis feugiat.
+                                    다양한 결의 좋은 작품들을 만날 수 있는 감사한 시간이었습니다. ‘CGV아트하우스상’의 심사는 어떤 우열을 가리기보단 심사위원들 각자의 성향과 취향을 담아 지지하는 영화들을 선정하였습니다.&lt;절해고도&gt;는 공감을 이끌어 내는 진정성 있는 연출과 더불어 이를 표현하는 배우들의 뛰어난 연기력이 돋보이는 작품들이었습니다. 외 작품 비전 부문 모든 감독님들의 다음 작품을 응원하고 기대하겠습니다.
                                 </p>
                             </div>
                         </div>
                         <div class="swiper-slide">
-                            <h2 data-swiper-parallax="-400">백금상수상</h2>
-                            <div class="title" data-swiper-parallax="-300">Slide 4</div>
-                            <div class="subtitle" data-swiper-parallax="-200">Subtitle</div>
+                            <h2 data-swiper-parallax="-400">부산시네필상</h2>
+                            <div class="title" data-swiper-parallax="-300">&lt;아임 쏘 쏘리&gt;</div>
+                            <div class="subtitle" data-swiper-parallax="-200">자오량 | 대한민국</div>
                             <div class="text" data-swiper-parallax="-100">
                                 <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-                                    dictum mattis velit, sit amet faucibus felis iaculis nec. Nulla
-                                    laoreet justo vitae porttitor porttitor. Suspendisse in sem justo.
-                                    Integer laoreet magna nec elit suscipit, ac laoreet nibh euismod.
-                                    Aliquam hendrerit lorem at elit facilisis rutrum. Ut at
-                                    ullamcorper velit. Nulla ligula nisi, imperdiet ut lacinia nec,
-                                    tincidunt ut libero. Aenean feugiat non eros quis feugiat.
+                                    이 영화는 객관적인 시선을 유지하면서도 우리가 피할 수도 없고 피해서도 안 되는 중요한 문제를 논리적으로 관객에게 다가갑니다. 또한 치밀하게 설계된 서늘한 사운드와 메타포로 주제를 효과적으로 전달했기에 이 작품을 수상작으로 선택하였습니다.
                                 </p>
                             </div>
                         </div>
                         <div class="swiper-slide">
-                            <h2 data-swiper-parallax="-400">백금상수상</h2>
-                            <div class="title" data-swiper-parallax="-300">Slide 5</div>
-                            <div class="subtitle" data-swiper-parallax="-200">Subtitle</div>
+                            <h2 data-swiper-parallax="-400">비프메세나상</h2>
+                            <div class="title" data-swiper-parallax="-300">&lt;세이레&gt;</div>
+                            <div class="subtitle" data-swiper-parallax="-200">박강 | 대한민국</div>
                             <div class="text" data-swiper-parallax="-100">
                                 <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-                                    dictum mattis velit, sit amet faucibus felis iaculis nec. Nulla
-                                    laoreet justo vitae porttitor porttitor. Suspendisse in sem justo.
-                                    Integer laoreet magna nec elit suscipit, ac laoreet nibh euismod.
-                                    Aliquam hendrerit lorem at elit facilisis rutrum. Ut at
-                                    ullamcorper velit. Nulla ligula nisi, imperdiet ut lacinia nec,
-                                    tincidunt ut libero. Aenean feugiat non eros quis feugiat.
+                                    민속 신앙에 기반한 귀신들의 전설과 오늘날 아이의 출산을 앞둔 한 남자의 심리적 고통 사이에서, 이 창의적 영화는 리얼리즘과 환상을 결합한다. 심도 있는 연출은 주연 배우의 담담한 연기의 효과를 극대화시킨다.
                                 </p>
                             </div>
                         </div>
