--- a/Pj_BIFF/sub1.html
+++ b/Pj_BIFF/sub1.html
@@ -111,7 +111,7 @@
                     <li>지옥 Hellbound</li>
                     <li>Director <br>
                         YEON Sang-ho 연상호</li>
-                    <li>"몇 날 몇 시에 당신은 죽는다, 지옥에 간다" 그렇게 지옥으로부터의 고지를 받은 자는 어김 없이 예정된 시간에 지옥의 사자들에게 끌려간다. 그런 일이 서울 한복판에서 모두가 지켜보는 가운데 일어난다. </li>
+                    <li>"몇 날 몇 시에 당신은 죽는다, 지옥에 간다" 그렇게 지옥으로부터의 고지를 받은 자는 어김 없이 예정된 시간에 지옥의 사자들에게 끌려간다.<br>그런 일이 서울 한복판에서 모두가 지켜보는 가운데 일어난다. </li>
                     <li>*10/7(목) GV는 상영전 무대인사로 진행됩니다.</li>
                 </ul>
             </div>
@@ -125,7 +125,8 @@
                     <button class="play-close"></button>
                     <div class="play-triangle">
                         <div class="play-video">
-                            <iframe width="600" height="400" src="https://www.youtube.com/embed/WNTSu7p1S8A"allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            <!-- <iframe width="600" height="400" src="https://www.youtube.com/embed/WNTSu7p1S8A"allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+                            <iframe width="600" height="400" src="https://www.youtube.com/embed/KCFcuUnOhIc"allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div>
                     </div>
                 </div>
@@ -166,10 +167,10 @@
                                 <p class="time en">18:00</p>
                                 <div class="film_tit">
                                     <div id="txt6">
-                                        <span class="film_tit_kor">행복의 나라로</span>
-                                        <span class="film_tit_eng en">To the Land of Happiness</span>
+                                        <span class="film_tit_kor">지옥</span>
+                                        <span class="film_tit_eng en">Hellbound</span>
                                     </div>
-                                    "(개막식+개막작)"
+                                    "(무대인사 중계)"
                                 </div>
                                 <div class="grade">
                                     <span class="ico_grade ico_15" title="15세 이상 관람가"></span>
@@ -197,13 +198,13 @@
                             </div>
                             <div class="sch_it sch_it4">
                                 <span class="code en">605관</span>
-                                <p class="time en">18:00</p>
+                                <p class="time en">19:20</p>
                                 <div class="film_tit">
                                     <div id="txt6">
-                                        <span class="film_tit_kor">행복의 나라로</span>
-                                        <span class="film_tit_eng en">To the Land of Happiness</span>
+                                        <span class="film_tit_kor">지옥</span>
+                                        <span class="film_tit_eng en">Hellbound</span>
                                     </div>
-                                    "(개막식생중계+개막작)"
+                                    "(백신패스관)"
                                 </div>
                                 <div class="grade">
                                     <span class="ico_grade ico_15" title="15세 이상 관람가"></span>
@@ -256,6 +257,7 @@
                             <li>
                                 <a href="https://www.youtube.com/channel/UCJB3MxLQsak5tT-Yvod2alA" target="_blank"
                                     title="유튜브 이동" class="youtube"></a>
+                                    
                             </li>
                         </ul>
                     </div>
