--- a/Pj_BIFF/index.html
+++ b/Pj_BIFF/index.html
@@ -129,7 +129,7 @@
           " data-swiper-parallax="-23%"></div>
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
-                            <h2 data-swiper-parallax="-400">CGK촬영상</h2>
+                            
                                 <div class="title" data-swiper-parallax="-300">&lt;초록밤&gt;</div>
                                 <div class="subtitle" data-swiper-parallax="-200">윤서진 | 대한민국</div>
                                 <div class="text" data-swiper-parallax="-100">
@@ -209,34 +209,30 @@
                                 <li><img src="./biff/img/sddefault(15).jpg" alt="items"></li>
                                 <li><img src="./biff/img/sddefault(16).jpg" alt="items"></li>
                                 <li><img src="./biff/img/sddefault(17).jpg" alt="items"></li>
-                                <li><img src="./biff/img/sddefault(18).jpg" alt="items"></li>
-                                <li><img src="./biff/img/sddefault(3).jpg" alt="items"></li>
                             </ul>
                         </div>
                     </div>
-                    <h2>무대인사로</h2>
+                    <h2>BIFF 미디어</h2>
                     <div id="handle1">
                         <div id="move1">
                             <ul class="dselect1">
-                                <li><img src="./biff/img/sddefault(1).jpg" alt="items"></li>
-                                <li><img src="./biff/img/sddefault(2).jpg" alt="items"></li>
-                                <li><img src="./biff/img/sddefault(3).jpg" alt="items"></li>
-                                <li><img src="./biff/img/sddefault(4).jpg" alt="items"></li>
-                                <li><img src="./biff/img/sddefault(5).jpg" alt="items"></li>
-                                <li><img src="./biff/img/sddefault(6).jpg" alt="items"></li>
-                                <li><img src="./biff/img/sddefault(7).jpg" alt="items"></li>
-                                <li><img src="./biff/img/sddefault(8).jpg" alt="items"></li>
-                                <li><img src="./biff/img/sddefault(9).jpg" alt="items"></li>
-                                <li><img src="./biff/img/sddefault(10).jpg" alt="items"></li>
-                                <li><img src="./biff/img/sddefault(11).jpg" alt="items"></li>
-                                <li><img src="./biff/img/sddefault(12).jpg" alt="items"></li>
-                                <li><img src="./biff/img/sddefault(13).jpg" alt="items"></li>
-                                <li><img src="./biff/img/sddefault(14).jpg" alt="items"></li>
-                                <li><img src="./biff/img/sddefault(15).jpg" alt="items"></li>
-                                <li><img src="./biff/img/sddefault(16).jpg" alt="items"></li>
                                 <li><img src="./biff/img/sddefault(17).jpg" alt="items"></li>
-                                <li><img src="./biff/img/sddefault(18).jpg" alt="items"></li>
+                                <li><img src="./biff/img/sddefault(16).jpg" alt="items"></li>
+                                <li><img src="./biff/img/sddefault(15).jpg" alt="items"></li>
+                                <li><img src="./biff/img/sddefault(14).jpg" alt="items"></li>
+                                <li><img src="./biff/img/sddefault(13).jpg" alt="items"></li>
+                                <li><img src="./biff/img/sddefault(12).jpg" alt="items"></li>
+                                <li><img src="./biff/img/sddefault(11).jpg" alt="items"></li>
+                                <li><img src="./biff/img/sddefault(10).jpg" alt="items"></li>
+                                <li><img src="./biff/img/sddefault(9).jpg" alt="items"></li>
+                                <li><img src="./biff/img/sddefault(8).jpg" alt="items"></li>
+                                <li><img src="./biff/img/sddefault(7).jpg" alt="items"></li>
+                                <li><img src="./biff/img/sddefault(6).jpg" alt="items"></li>
+                                <li><img src="./biff/img/sddefault(5).jpg" alt="items"></li>
+                                <li><img src="./biff/img/sddefault(4).jpg" alt="items"></li>
                                 <li><img src="./biff/img/sddefault(3).jpg" alt="items"></li>
+                                <li><img src="./biff/img/sddefault(2).jpg" alt="items"></li>
+                                <li><img src="./biff/img/sddefault(1).jpg" alt="items"></li>
                             </ul>
                         </div>
                     </div>
