--- a/Pj_BIFF/sub1.html
+++ b/Pj_BIFF/sub1.html
@@ -106,7 +106,9 @@
             <!-- partial:index.partial.html -->
             <div class="play-backdrop"></div>
             <div class="backmain">
-                <a class="back" href="./index.html">뒤로가기</a>
+                <div onclick="location.href ='./index.html'">
+                <a class="back">뒤로가기</a>
+            </div>
                 <ul class="Mtxt">
                     <li>지옥 Hellbound</li>
                     <li>Director <br>
