--- a/Pj_BIFF/index.html
+++ b/Pj_BIFF/index.html
@@ -129,7 +129,7 @@
           " data-swiper-parallax="-23%"></div>
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
-                            
+                            <div onclick="location.href ='./sub2.html'">
                                 <div class="title" data-swiper-parallax="-300">&lt;초록밤&gt;</div>
                                 <div class="subtitle" data-swiper-parallax="-200">윤서진 | 대한민국</div>
                                 <div class="text" data-swiper-parallax="-100">
@@ -137,8 +137,10 @@
                                         이 영화는 절제된 대사와 서사의 공백을 감각적인 이미지와 사운드와 결합함으로써 죽음에 맞닥뜨린 가족을 드러냅니다. 또한 관념적인 주제를 다루지만, 시의성을 잃지 않는 균형을 보여주었기에 이 작품을 수상작으로 선택하였습니다.
                                     </p>
                                 </div>
+                            </div>
                         </div>
                         <div class="swiper-slide">
+                            <div onclick="location.href ='./sub1.html'">
                             <h2 data-swiper-parallax="-400">시민평론가상</h2>
                             <div class="title" data-swiper-parallax="-300">&lt;지옥&gt;</div>
                             <div class="subtitle" data-swiper-parallax="-200">윤서진 | 대한민국</div>
@@ -146,6 +148,7 @@
                                 <p>
                                     "몇 날 몇 시에 당신은 죽는다, 지옥에 간다" 그렇게 지옥으로부터의 고지를 받은 자는 어김 없이 예정된 시간에 지옥의 사자들에게 끌려간다. 그런 일이 서울 한복판에서 모두가 지켜보는 가운데 일어난다. 신흥 종교 단체 새진리회의 의장 정진수(유아인)는 이것이 진정으로 현실 세계에서 일어나고 있는 신의 집행임을 사람들에게 설파한다. 한편 일부는 새진리회에 맞서 싸우며 사건의 실체를 밝히려 한다.
                                 </p>
+                            </div>
                             </div>
                         </div>
                         <div class="swiper-slide">
