--- a/Pj_BIFF/index.html
+++ b/Pj_BIFF/index.html
@@ -130,6 +130,7 @@
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
                             <div onclick="location.href ='./sub2.html'">
+                                <h2 data-swiper-parallax="-400">시민평론가상</h2>
                                 <div class="title" data-swiper-parallax="-300">&lt;초록밤&gt;</div>
                                 <div class="subtitle" data-swiper-parallax="-200">윤서진 | 대한민국</div>
                                 <div class="text" data-swiper-parallax="-100">
