--- a/Pj_BIFF/index.html
+++ b/Pj_BIFF/index.html
@@ -359,7 +359,8 @@
                             </li>
                             <li>
                                 <a href="https://www.youtube.com/channel/UCJB3MxLQsak5tT-Yvod2alA" target="_blank"
-                                    title="유튜브 이동" class="youtube"></a>
+                                    title="유튜브 이동" class="youtube">
+                                </a>
                             </li>
                         </ul>
                     </div>
