--- a/index1.html
+++ b/index1.html
@@ -1,39 +1,45 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>프로젝트 바로가기</title>
 </head>
+
 <body>
     <h1>프로젝트 바로가기</h1>
     <h2>
         <ul>
             <li>
-                <a href="./001.HTML/001.Info_Pj/index.html"target="_blank">네이버 뉴스 요약</a>
+                <a href="./001.HTML/001.Info_Pj/index.html" target="_blank">네이버 뉴스 요약</a>
             </li>
             <li>
-                <a href="./001.HTML/002.Drama_PJ/drama1.html"target="_blank">최신드라마</a>
+                <a href="./001.HTML/002.Drama_PJ/drama1.html" target="_blank">최신드라마</a>
             </li>
             <li>
-                <a href="./001.HTML/002.Drama_PJ/dramaTable.html"target="_blank">드라마리스트</a>
+                <a href="./001.HTML/002.Drama_PJ/dramaTable.html" target="_blank">드라마리스트</a>
             </li>
             <li>
-                <a href="./001.HTML/003.DKB_PJ/index.html"target="_blank">도깨비</a>
+                <a href="./001.HTML/003.DKB_PJ/index.html" target="_blank">도깨비</a>
             </li>
             <li>
-                <a href="./001.HTML/005.Robot.Pj/robot.html"target="_blank">Robot</a>
+                <a href="./001.HTML/005.Robot.Pj/robot.html" target="_blank">Robot</a>
             </li>
             <li>
-                <a href="./001.HTML/006.CGV_PJ/003.site/intro.html"target="_blank">CGV</a>
+                <a href="./001.HTML/006.CGV_PJ/003.site/intro.html" target="_blank">CGV</a>
             </li>
             <li>
-                <a href="./001.HTML/009.SliceMove_PJ/lotte.html"target="_blank">LOTTE</a>
+                <a href="./001.HTML/009.SliceMove_PJ/lotte.html" target="_blank">LOTTE</a>
             </li>
             <li>
-                <a href="./001.HTML/008.VOGUE_PJ/002.site/index.html"target="_blank">VOGUE</a>
+                <a href="./001.HTML/008.VOGUE_PJ/002.site/index.html" target="_blank">VOGUE</a>
+            </li>
+            <li>
+                <a href="./Pj_BIFF/index.html" target="_blank">BIFF</a>
             </li>
         </ul>
     </h2>
 </body>
+
 </html>
